add message migration, model, controller
