# app/Http/Controllers/Controller.php
@@ -8,6 +8,14 @@ namespace App\Http\Controllers;
  * title="Tytuł Twojego API - Twoje Mieszkanie",
  * description="Dokumentacja API dla serwisu Twoje Mieszkanie"
  * )
+ * @OA\Tag(
+ *  name="Użytkownik / Autoryzacja",
+ *  description="Operacje związane z kontem użytkownika i logowaniem."
+ *  )
+ * @OA\Tag(
+ *  name="Wiadomości",
+ *  description="Operacje związane z wiadomościami i konwersacjami."
+ *  )
  * @OA\SecurityScheme(
  * securityScheme="bearerAuth",
  * in="header",
@@ -18,6 +26,8 @@ namespace App\Http\Controllers;
  * description="Uwierzytelnienie za pomocą tokena Bearer"
  * )
  */
+
+
 abstract class Controller
 {
     //
