# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\MessageController;
 use App\Http\Controllers\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -12,3 +13,7 @@ Route::post('/register',[UserController::class,'register']);
 Route::post('/login',[UserController::class,'login']);
 Route::middleware('auth:sanctum')->post('/logout',[UserController::class,'logout']);
 Route::middleware('auth:sanctum')->post('/changePassword', [UserController::class, 'changePassword']);
+
+Route::middleware('auth:sanctum')->get('/messages',[MessageController::class,'index']);
+Route::middleware('auth:sanctum')->post('/messages/{receiver}',[MessageController::class,'store']);
+Route::middleware('auth:sanctum')->get('/messages/{partner}',[MessageController::class,'show']);
